fixed sessions error

--- a/bloghog/public/stylesheets/styles.css
+++ b/bloghog/public/stylesheets/styles.css
@@ -1,5 +1,5 @@
 body {
-	background: url('http://wallpaperscraft.com/image/glasses_miscellaneous_book_cloth_black_white_31415_2560x1600.jpg');
+	background: url('http://4.bp.blogspot.com/-C6PdqXB9VwE/UKuLK3lMciI/AAAAAAAACUk/qODYHTdtSPQ/s640/Vassilis+Tangoulis.jpg');
 	background-repeat: no-repeat;
 	background-size: 100%;
 	color: white;
