--- a/bloghog/views/layout.erb
+++ b/bloghog/views/layout.erb
@@ -10,7 +10,7 @@
 <body>
 	
 	<% if session[:current_user] %>
-		<form action="/sessions" method="post"><a href="/users/new">SIGN UP</a>
+		<form action="/sessions" method="post">
 			<input type="hidden" name="_method" value="delete">
 			<input type="submit" value="SIGN OUT">
 		</form>
