--- a/bloghog/views/profiles/index.erb
+++ b/bloghog/views/profiles/index.erb
@@ -2,10 +2,10 @@
 <h2><%= @user.username %></h2>
 
 <div class='blog-list'>
-	<% @blogs.each do |blog| %>
-		<%= blog.title %>
-		<%= blog.post %>
-		<%= blog.date_posted%>
+	<% @entries.each do |entry| %>
+		<%= entry.title %>
+		<%= entry.post %>
+		<%= entry.date_posted%>
 		</div>
 	<% end %>
 </div>
