--- a/bloghog/views/users/new.erb
+++ b/bloghog/views/users/new.erb
@@ -1,7 +1,7 @@
 <h2>Join BlogHog</h2>
 
 <form action="/users" method="post">
-	<input type="text" name="user" placeholder="Username">
+	<input type="text" name="user[username]" placeholder="Username">
 	<input type="text" name="user[avatar]" placeholder="Avatar URL">
 	<input type="password" name="password" placeholder="Password">
 	<input type="submit">
