--- a/bloghog/views/entries/index.erb
+++ b/bloghog/views/entries/index.erb
@@ -1,10 +1,14 @@
-<center><h1>B L O G H O G</h1></center>
-
 <div class='miniuser-list'>
+
+<form action="/entries/new" method="get">
+	<input type="submit" value="Create a new post">
+</form>
+
+	<center>
 	<% @entries.each do |entry| %>
 		<div class='miniuser'>
 			<p class='username'>
-				<a href="/entries/<%= entry.id %>"><b><%= entry.title.upcase %></b></a>
+				<a href="/entries/<%= entry.id %>"><%= entry.title.upcase %></a>
 				<br>
 				<%= entry.post %>
 				<br>
@@ -13,6 +17,5 @@
 			</p>
 		</div>
 	<% end %>
+</center>
 </div>
-
-
