--- a/bloghog/views/not_authenticated.erb
+++ b/bloghog/views/not_authenticated.erb
@@ -1,12 +1,12 @@
+<center>
 <h3>***YOU ARE NOT AUTHENTICATED***</h3>
-<h2><a href="/sessions/new">LOG IN</a></h2>
-<h2><a href="/users/new">CREATE AN ACCOUNT</a></h2>
+
 
 <div class='miniuser-list'>
 	<% @entries.each do |entry| %>
 		<div class='miniuser'>
 			<p class='username'>
-				<%= entry.title.upcase %>
+				<a href="/entries/<%= entry.id %>"><b><%= entry.title.upcase %></b></a>
 				<br>
 				<%= entry.post %>
 				<br>
@@ -16,3 +16,4 @@
 		</div>
 	<% end %>
 </div>
+</center>
