--- a/bloghog/views/profiles/index.erb
+++ b/bloghog/views/profiles/index.erb
@@ -1,6 +1,10 @@
 <img src="<%= @user.avatar %>">
 <h2><%= @user.username %></h2>
 
+<form action="/entries" method="get">
+	<input type="submit" value="View posts">
+</form>
+
 <div class='blog-list'>
 	<% @entries.each do |entry| %>
 		<%= entry.title %>
