--- a/bloghog/views/users/new.erb
+++ b/bloghog/views/users/new.erb
@@ -1,3 +1,4 @@
+<center>
 <h2>Join BlogHog</h2>
 
 <form action="/users" method="post">
@@ -6,3 +7,4 @@
 	<input type="password" name="password" placeholder="Password">
 	<input type="submit">
 </form>
+</center>
