--- a/bloghog/views/entries/edit.erb
+++ b/bloghog/views/entries/edit.erb
@@ -9,7 +9,7 @@
 	</p>
 	<p>
 		POST:
-		<input class="entrypost" name="entry[post]" value="<%= @entry.post %>">
+		<textarea id="data" rows="30" cols="70" input class="entrypost" name="entry[post]"><%= @entry.post %></textarea>
 	</p>
 
 	<div class="myButton">
