--- a/bloghog/views/entries/new.erb
+++ b/bloghog/views/entries/new.erb
@@ -1,3 +1,4 @@
+<center>
 <h2>New Entry:</h2>
 
 <form action="/entries" method="post">
@@ -7,7 +8,9 @@
 	</p>
 	<p>
 		POST:
-		<input class="entrypost" name="entry[post]" placeholder="W R I T E  A W A Y...">
+		<p>
+		<textarea id="data" rows="30" cols="70" name="entry[post]" placeholder="W R I T E  A W A Y..."></textarea>
+		</p>
 	</p>
 	<p>
 		DATE:
@@ -17,3 +20,5 @@
 		<input type="submit" value="P O S T !">
 	</div>
 </form>
+
+</center>
