--- a/bloghog/views/index.erb
+++ b/bloghog/views/index.erb
@@ -1,6 +1,6 @@
 <center><h1>B L O G H O G</h1></center>
-
-<div class='miniuser-list'>
+<div class="container">
+<ul>
 	<% @entries.each do |entry| %>
 		<div class='miniuser'>
 			<p class='username'>
@@ -13,6 +13,7 @@
 			</p>
 		</div>
 	<% end %>
+</ul>
 </div>
 
 
