--- a/bloghog/views/not_authenticated.erb
+++ b/bloghog/views/not_authenticated.erb
@@ -1,8 +1,9 @@
 <center>
-<h3>***YOU ARE NOT AUTHENTICATED***</h3>
+<h3>LOG IN OR JOIN TO GET BLOGHOGGING!</h3>
 
 
-<div class='miniuser-list'>
+<div class="container">
+<ul>
 	<% @entries.each do |entry| %>
 		<div class='miniuser'>
 			<p class='username'>
@@ -15,5 +16,6 @@
 			</p>
 		</div>
 	<% end %>
+</ul>
 </div>
 </center>
