--- a/bloghog/views/profiles/index.erb
+++ b/bloghog/views/profiles/index.erb
@@ -1,15 +1,24 @@
-<img src="<%= @user.avatar %>">
+<center>
+
+
+
 <h2><%= @user.username %></h2>
+<img src="<%= @user.avatar %>" class="avatar">
 
-<form action="/entries" method="get">
-	<input type="submit" value="View posts">
-</form>
-
-<div class='blog-list'>
+<div class="container">
+<ul>
 	<% @entries.each do |entry| %>
-		<%= entry.title %>
-		<%= entry.post %>
-		<%= entry.date_posted%>
+		<div class='miniuser'>
+			<p class='username'>
+				<a href="/entries/<%= entry.id %>"><b><%= entry.title.upcase %></b></a>
+				<br>
+				<%= entry.post %>
+				<br>
+				<%= entry.date_posted %>
+				<br>
+			</p>
 		</div>
 	<% end %>
+</ul>
 </div>
+</center>
