tags separated with ', #'

--- a/bloghog/views/authenticated.erb
+++ b/bloghog/views/authenticated.erb
@@ -8,10 +8,10 @@
 			<p class='username'>
 				<a href="/entries/<%= entry.id %>"><b><%= entry.title.upcase %></b></a>
 				<br>
+				<br>
 				<%= entry.post %>
-				<br>
-				<%= entry.date_posted %>
-				<br>
+				<h5>#<%= entry.tags.join(", #")%></h5>
+				<h5>POSTED: <%= entry.date_posted %></h5>
 			</p>
 		</div>
 	<% end %>
