--- a/bloghog/views/layout.erb
+++ b/bloghog/views/layout.erb
@@ -2,39 +2,44 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>BLOGHOG</title>
 	<link rel="stylesheet" href="/stylesheets/styles.css">
 	<script src='javascript/jquery.js'></script>
 	<script src='javascript/script.js'></script>
+	<title>BLOGHOG</title>
 </head>
 <body>
-	<center><h1><a href="/">B L O G H O G</a></h1>
-	<div id='cssmenu'>
-	<% if session[:current_user] %>
+	<center>
+			<div class="nav-bar">
 
-		<form action="/sessions" method="post">
-			<input type="hidden" name="_method" value="delete">
-			<input type="submit" value="SIGN OUT">
-		</form>
-		<form action="/profiles">
-			<input type="submit" value="Profile">
-		</form>
-		<form action="/entries" method="get">
-			<input type="submit" value="View posts">
-		</form>
-		<form action="/entries/new" method="get">
-			<input type="submit" value="Create a post">
-		</form>
-	<% else %>
-		<ul>
-			<li class="active"><a href="/"><span>HOME</span></a></li>
-			<li><a href="/users/new"><span>JOIN BLOGHOG</span></a></li>
-			<li class="last"><a href="/sessions/new"><span>LOG IN</span></a></li>
-		</ul>
-	<% end %>
+				<% if session[:current_user] %>
 
-		</div>
-</center>
+					<form action="/sessions" method="post">
+						<input type="hidden" name="_method" value="delete">
+						<input type="submit" value="SIGN OUT">
+					</form>
+					<form action="/profiles">
+						<input type="submit" value="PROFILE">
+					</form>
+					<form action="/entries" method="get">
+						<input type="submit" value="VIEW POSTS">
+					</form>
+					<form action="/entries/new" method="get">
+						<input type="submit" value="CREATE A POST">
+					</form>
+
+				<% else %>
+
+					<ul>
+						<li class="active"><a href="/"><span>HOME</span></a></li>
+						<li><a href="/users/new"><span>JOIN BLOGHOG</span></a></li>
+						<li class="last"><a href="/sessions/new"><span>LOG IN</span></a></li>
+					</ul>
+
+				<% end %>
+
+			</div>
+		<h1><a href="/">B L O G H O G</a></h1>
+	</center>
 
 	<%= yield %>
 
