--- a/bloghog/views/users/new.erb
+++ b/bloghog/views/users/new.erb
@@ -3,8 +3,16 @@
 
 <form action="/users" method="post">
 	<input type="text" name="user[username]" placeholder="Username">
+	<br>
+	<br>
 	<input type="text" name="user[avatar]" placeholder="Avatar URL">
+	<br>
+	<br>
 	<input type="password" name="password" placeholder="Password">
+	<br>
+	<br>
+	<div class="myButton">
 	<input type="submit">
+	</div>
 </form>
 </center>
