--- a/bloghog/public/stylesheets/styles.css
+++ b/bloghog/public/stylesheets/styles.css
@@ -1,20 +1,26 @@
-h1 {
-	font-size: 6em;
-	font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
-}
-
-h3 {
-	font-size: 3em;
-	color: white;
-	text-shadow: 2px 2px #484848;
-}
-
 body {
-	background: url('http://crossroadstrading.com/wp-content/uploads/excuisite.co_.png');
-	background-repeat: fixed;
+  background-repeat: fixed;
 	background-size: cover;
 	color: black;
 	font-family: Candara, Calibri, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
+  margin: 0 auto;
+  font-weight: 300px;
+}
+
+h1 {
+  font-size: 6em;
+  font-weight: 100px;
+  font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif;
+}
+
+h3 {
+  font-size: 3em;
+  color: white;
+  text-shadow: 2px 2px #484848;
+}
+
+h5 {
+  font-size: 12px;
 }
 
 .avatar {
@@ -31,12 +37,13 @@ div.myButton input {
 }
 
 .container .miniuser{
-	width: 600px;
+	width: 680px;
 	margin: auto;
 	clear: both;
 	display: block;
-	border: 3px black solid;
 	word-wrap: break-word;
+  border-bottom: 1px solid black;
+  margin-bottom: 5px;
 }
 
 input[type="text"]{
@@ -72,13 +79,12 @@ a {
 
 
 a:hover {
-	color: rgb(152, 152, 150);
+	color: #F5F5F5;
 }
 
 li {
 	display: inline;
 }
-
 
 .entry {
 	background-color: black;
@@ -86,154 +92,36 @@ li {
 	width: 600px;
 }
 
-#cssmenu form {
-	display: inline-block;
-}
-
-#cssmenu input {
-	background: none;
-	color: white;
-	border: none;
-	color: #ffffff;
-	text-decoration: none;
-	display: block;
-	padding: 15px 25px;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: 700;
-	text-transform: uppercase;
-	font-size: 14px;
-	position: relative;
-	-webkit-transition: color .25s;
-	-moz-transition: color .25s;
-	-ms-transition: color .25s;
-	-o-transition: color .25s;
-	transition: color .25s;
-}
-
-#cssmenu input:hover {
-  color: #333333;
-}
-#cssmenu input:hover:before {
+.nav-bar {
+  position: fixed;
+  top: 0;
   width: 100%;
+  height: 1em;
+  padding-bottom: 28px;
+  background-color: lightgray;
 }
 
+.nav-bar li {
+  margin: 5px 10px 5px 10px;
+}
 
-#cssmenu {
-  background: #000000;
-  width: auto;
-}
-#cssmenu ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  line-height: 1;
-  display: block;
-  zoom: 1;
-}
-#cssmenu ul:after {
-  content: " ";
-  display: block;
-  font-size: 0;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-#cssmenu ul li {
+.nav-bar form {
   display: inline-block;
-  padding: 0;
-  margin: 0;
 }
-#cssmenu.align-right ul li {
-  float: right;
+
+.nav-bar input {
+  font-size: 20px;
+  border: none;
+  font-family: Candara, Calibri, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
+  background-color: lightgray;
+  font-size: 16px;
+  padding-top: 15px;
 }
-#cssmenu.align-center ul {
-  text-align: center;
+
+.nav-bar input:hover {
+  color: #F5F5F5; 
 }
-#cssmenu ul li a {
-  color: #ffffff;
-  text-decoration: none;
-  display: block;
-  padding: 15px 25px;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 14px;
-  position: relative;
-  -webkit-transition: color .25s;
-  -moz-transition: color .25s;
-  -ms-transition: color .25s;
-  -o-transition: color .25s;
-  transition: color .25s;
-}
-#cssmenu ul li a:hover {
-  color: #333333;
-}
-#cssmenu ul li a:hover:before {
-  width: 100%;
-}
-#cssmenu ul li a:after {
-  content: "";
-  display: block;
-  position: absolute;
-  right: -3px;
-  top: 19px;
-  height: 6px;
-  width: 6px;
-  background: #ffffff;
-  opacity: .5;
-}
-#cssmenu ul li a:before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 3px;
-  width: 0;
-  background: #333333;
-  -webkit-transition: width .25s;
-  -moz-transition: width .25s;
-  -ms-transition: width .25s;
-  -o-transition: width .25s;
-  transition: width .25s;
-}
-#cssmenu ul li.last > a:after,
-#cssmenu ul li:last-child > a:after {
-  display: none;
-}
-#cssmenu ul li.active a {
-  color: #333333;
-}
-#cssmenu ul li.active a:before {
-  width: 100%;
-}
-#cssmenu.align-right li.last > a:after,
-#cssmenu.align-right li:last-child > a:after {
-  display: block;
-}
-#cssmenu.align-right li:first-child a:after {
-  display: none;
-}
-@media screen and (max-width: 768px) {
-  #cssmenu ul li {
-    float: none;
-    display: block;
-  }
-  #cssmenu ul li a {
-    width: 100%;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    border-bottom: 1px solid #ffffff;
-  }
-  #cssmenu ul li.last > a,
-  #cssmenu ul li:last-child > a {
-    border: 0;
-  }
-  #cssmenu ul li a:after {
-    display: none;
-  }
-  #cssmenu ul li a:before {
-    display: none;
-  }
+
+.new-entry {
+  padding-bottom: 80px;
 }
