--- a/bloghog/views/entries/index.erb
+++ b/bloghog/views/entries/index.erb
@@ -9,11 +9,12 @@
 			
 				<a href="/entries/<%= entry.id %>"><b><%= entry.title.upcase %></b></a>
 				<br>
+				<br>
 				<%= entry.post %>
-				<br>
-				<%= entry.date_posted %>
-				<br>
+				<h5>#<%= entry.tags.join(", #")%></h5>
+				<h5>POSTED: <%= entry.date_posted %></h5>
 		
+
 		</div>
 	<% end %>
 </ul>
