--- a/bloghog/views/entries/new.erb
+++ b/bloghog/views/entries/new.erb
@@ -1,4 +1,5 @@
 <center>
+<div class="new-entry">
 	<h2>New Entry:</h2>
 
 	<form action="/entries" method="post">
@@ -20,5 +21,5 @@
 			<input type="submit" value="P O S T !">
 		</div>
 	</form>
-
+</div>
 </center>
