--- a/bloghog/views/not_authenticated.erb
+++ b/bloghog/views/not_authenticated.erb
@@ -1,5 +1,4 @@
 <center>
-<h3>LOG IN OR JOIN TO GET BLHOGGING!</h3>
 
 
 <div class="container">
@@ -9,10 +8,10 @@
 			<p class='username'>
 				<a href="/entries/<%= entry.id %>"><b><%= entry.title.upcase %></b></a>
 				<br>
+				<br>
 				<%= entry.post %>
-				<br>
-				<%= entry.date_posted %>
-				<br>
+				<h5>#<%= entry.tags.join(", #")%></h5>
+				<h5>POSTED: <%= entry.date_posted %></h5>
 			</p>
 		</div>
 	<% end %>
