--- a/bloghog/views/index.erb
+++ b/bloghog/views/index.erb
@@ -12,7 +12,7 @@
 				<h5>#<%= entry.tags.join(", #")%></h5>
 				<h5>POSTED: <%= entry.date_posted %></h5>
 				<br>
-				<p class='comment-footer'> <b:if cond='data:post.embedCommentForm'> <b:include data='post' name='comment-form'/> <b:else/> <b:if cond='data:post.allowComments'> <a expr:href='data:post.addCommentUrl' expr:onclick='data:post.addCommentOnclick'><data:postCommentMsg/></a> </b:if> </b:if> </p>
+				<h5>WRITTEN BY: <%= entry.%></h5>
 			</p>
 		</div>
 	<% end %>
