img of hog fixed on bottom right

--- a/bloghog/views/layout.erb
+++ b/bloghog/views/layout.erb
@@ -39,6 +39,7 @@
 
 			</div>
 		<h1><a href="/">B L O G H O G</a></h1>
+		<!-- <img src="http://www.clker.com/cliparts/k/A/P/3/4/W/black-pig-md.png"> -->
 	</center>
 
 	<%= yield %>
