--- a/bloghog/public/stylesheets/styles.css
+++ b/bloghog/public/stylesheets/styles.css
@@ -1,6 +1,11 @@
 body {
   background-repeat: fixed;
 	background-size: cover;
+  background: url("http://www.clker.com/cliparts/k/A/P/3/4/W/black-pig-md.png");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  background-attachment: fixed;
+  background-size: 70px;
 	color: black;
 	font-family: Candara, Calibri, Segoe, 'Segoe UI', Optima, Arial, sans-serif;
   margin: 0 auto;
