a links hover transition 1s

--- a/bloghog/public/stylesheets/styles.css
+++ b/bloghog/public/stylesheets/styles.css
@@ -80,6 +80,7 @@ input[type="password"]{
 a {
 	text-decoration: none;
 	color: black;
+  transition: 0.3s;
 }
 
 
@@ -121,6 +122,7 @@ li {
   background-color: lightgray;
   font-size: 16px;
   padding-top: 15px;
+  transition: 0.3s;
 }
 
 .nav-bar input:hover {
